# choreo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  choreo.rosinstall  framefab_mpp.rosinstall
GTEngine/: CMakeLists.txt  package.xml
GTEngine/Include/: GTImagics.h  GTLowLevel.h
GTEngine/Include/Graphics/: GteBillboardNode.h  GteBoundingSphere.h  GteBspNode.h  GteConstantBuffer.h  GteDirectionalLightEffect.h  GteFontArialW400H18.h  GteGEDrawTarget.h  GteGEObject.h  GteGraphicsEngine.h  GteGraphicsObject.h  GteIndexFormat.h  GteLight.h  GteMaterial.h  GteNode.h  GteProgramFactory.h  GteSkinController.h  GteSpatial.h  GteSpotLightEffect.h  GteStructuredBuffer.h  GteTexture1.h  GteTextureBuffer.h  GteTextureRT.h  GteViewVolume.h
GTEngine/Include/Imagics/: GteHistogram.h  GteImageUtility2.h  GteImageUtility3.h
GTEngine/Include/LowLevel/: GteArray4.h  GteAtomicMinMax.h  GteLexicoArray2.h  GteLogToFile.h  GteLogToStringArray.h  GteMinHeap.h
GTEngine/Include/Mathematics/: GteACosEstimate.h  GteATanEstimate.h  GteAlignedBox.h  GteApprCylinder3.h  GteApprGreatCircle3.h  GteApprHeightLine2.h  GteApprOrthogonalLine3.h  GteApprPolynomial3.h  GteApprPolynomial4.h  GteApprPolynomialSpecial2.h  GteApprPolynomialSpecial3.h  GteApprSphere3.h  GteBSPrecision.h  GteBSplineCurveFit.h  (+74 more)
choreo/: CMakeLists.txt  package.xml
choreo_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
choreo_core/launch/: choreo_core.launch
choreo_core/src/: choreo_core_service.cpp  choreo_core_service_process_planning.cpp  trajectory_library.cpp
choreo_descartes_planner/: CMakeLists.txt  package.xml
choreo_descartes_planner/src/: capsulated_ladder_tree_RRTstar.cpp  choreo_ladder_graph_builder.cpp  pose_sampling_helpers.cpp  pose_verification_helpers.cpp  pose_verification_helpers.h
choreo_execution_gatekeeper/: CMakeLists.txt  package.xml
choreo_execution_gatekeeper/launch/: choreo_execution_gatekeeper.launch
choreo_execution_gatekeeper/src/: choreo_execution_gatekeeper_service.cpp  choreo_execution_gatekeeper_service_node.cpp  execution_utils.cpp  execution_utils.h
choreo_geometry_conversion_helpers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
choreo_geometry_conversion_helpers/src/: choreo_geometry_conversion_helpers.cpp
choreo_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
choreo_gui/src/: choreo_panel.cpp  choreo_widget.cpp  parameter_window_base.cpp  params_submenu.cpp
choreo_msgs/: CMakeLists.txt  package.xml
choreo_msgs/action/: ProcessExecution.action  ProcessPlanning.action  SimulateMotionPlan.action  TaskSequencePlanning.action  TaskSequenceProcessing.action
choreo_msgs/msg/: AssemblySequencePickNPlace.msg  Grasp.msg  ModelInputParameters.msg  OutputSaveDirInputParameters.msg  SequencedElement.msg  TaskSequenceInputParameters.msg  UnitProcessPlan.msg  WireFrameCollisionObject.msg
choreo_msgs/srv/: ChoreoParameters.srv  ElementNumberRequest.srv  OutputProcessPlans.srv  OutputProcessing.srv  ProcessPlanning.srv  TaskSequencePlanning.srv  TaskSequenceProcessing.srv  TrajectoryExecution.srv  VisualizeSelectedPath.srv
choreo_output_processor/: CMakeLists.txt  package.xml
choreo_output_processor/src/: choreo_output_processor.cpp  choreo_output_processor_node.cpp
choreo_param_helpers/: CMakeLists.txt  package.xml
choreo_planning_capability/: CMakeLists.txt  package.xml
choreo_rapidjson/: CMakeLists.txt  package.xml
choreo_simulation_executor/: CMakeLists.txt  package.xml
choreo_simulation_executor/src/: simulation_execution_service.cpp  simulation_execution_service_node.cpp
choreo_task_sequence_external_planner/: CMakeLists.txt  package.xml
choreo_task_sequence_external_planner/launch/: choreo_task_sequence_external_planner.launch
choreo_task_sequence_external_planner/scripts/: framefab_task_sequence_external_planner.py
choreo_task_sequence_processor/: CHANGELOG.rst  CMakeLists.txt  package.xml
choreo_task_sequence_processor/src/: json2msg_helpers.cpp  task_sequence_processor.cpp  task_sequence_processor_node.cpp  unit_process.cpp
choreo_visual_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
choreo_visual_tools/src/: choreo_visual_tools.cpp
framefab_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
framefab_core/data/: bunny0507_.pwf  bunny_result.json  framefab_path_result.json  simple_frame_result.json
framefab_core/include/: ADMMCut.h  BFAnalyzer.h  CoordTrans.h  DualGraph.h  ExtruderCone.h  FFAnalyzer.h  FiberPrintPARM.h  FiberPrintPlugIn.h  GCommon.h  Geometry.h  GraphCut.h  IllCondDetector.h  NormalCut.h  Parallelogram.h  Polyface.h  ProcAnalyzer.h  QPFactory.h  QPMosek.h  QuadricCollision.h  ResolveAngle.h  SeqAnalyzer.h  Statistics.h  Stiffness.h  StiffnessIO.h  StiffnessSolver.h  Triangle.h  WireFrame.h
framefab_core/launch/: framefab_core.launch
framefab_core/src/: ADMMCut.cpp  BFAnalyzer.cpp  CMakeLists.txt  CoordTrans.cpp  DualGraph.cpp  ExtruderCone.cpp  FFAnalyzer.cpp  FiberPrintPARM.cpp  FiberPrintPlugIn.cpp  GraphCut.cpp  IllCondDetector.cpp  Loader.cpp  NormalCut.cpp  ProcAnalyzer.cpp  QP.cpp  QPFactory.cpp  QPMosek.cpp  QuadricCollision.cpp  ResolveAngle.cpp  SeqAnalyzer.cpp  Statistics.cpp  Stiffness.cpp  StiffnessIO.cpp  StiffnessSolver.cpp  Timer.cpp  WireFrame.cpp  framefab_core_service.cpp  framefab_core_service_process_planning.cpp  trajectory_library.cpp
framefab_execution_gatekeeper/: CMakeLists.txt  package.xml
framefab_execution_gatekeeper/launch/: framefab_execution_gatekeeper.launch
framefab_execution_gatekeeper/src/: execution_utils.cpp  execution_utils.h  framefab_execution_gatekeeper_service.cpp  framefab_execution_gatekeeper_service_node.cpp
framefab_geometry_helpers/: CMakeLists.txt  package.xml
framefab_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
framefab_gui/config/: framefab_mpp_rviz_property.yaml  framefab_mpp_unit_conversion.yaml
framefab_gui/launch/: test.launch
framefab_gui/src/: framefab_panel.cpp  framefab_rviz_plugin.cpp  framefab_widget.cpp  parameter_window_base.cpp  params_submenu.cpp  planning_widget.cpp
(+1904 files in other folders)
