<?xml version="1.0"?>
<package format="2">
  <name>choreo_msgs</name>
  <version>0.1.0</version>
  <description>This package contains all the messages, services, and actions used in the Choreo
  framework to enable communications between nodes.
  </description>

  <author email="yijiangh@mit.edu">Yijiang Huang</author>
  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_msgs</depend>

</package>
