<?xml version="1.0"?>
<package format="2">
  <name>choreo_output_processor</name>
  <version>0.1.0</version>
  <description>
	This package converts computed plans to a customized json format that enables micro-path modifications
    and IO commands synchronization on any preferred programming platform downstream.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <author email="yijiangh@mit.com">Yijiang Huang</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>choreo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>choreo_rapidjson</depend>
</package>
