<?xml version="1.0"?>
<package format="2">
  <name>choreo_rapidjson</name>
  <version>0.1.0</version>
  <description>
    rapidjson ros wrapper.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
