<?xml version="1.0"?>
<package format="2">
  <name>choreo_visual_tools</name>
  <version>3.4.0</version>
  <description>The core coordinator for choreo to connect nodes to work together,
    e.g. GUI, planning modules, visualization, etc.</description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <author email="yijiangh@mit.edu">Yijiang Huang</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_visual_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>

  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>choreo_msgs</depend>

</package>
