<?xml version="1.0"?>
<package format="2">
  <name>framefab_core</name>
  <version>0.1.0</version>
  
  <description>
    This package houses the primary framefab "server" that is responsible for
    making the whole system go. It is actuated via service calls and farms out
    jobs to the many planning and execution components of the framefab project. 
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>framefab_msgs</depend>
  <depend>framefab_param_helpers</depend>

  <depend>rviz_visual_tools</depend>

  <build_depend>moveit_ros_move_group</build_depend>

</package>
