<?xml version="1.0"?>
<package format="2">
  <name>framefab_core</name>
  <version>0.1.0</version>
  
  <description>
    this package is the central monitoring node that connects
    Choreo's specialized packages together. It receives requests from UI
    package and dispatch / receive computation request to responsible packages.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>framefab_msgs</depend>
  <depend>descartes_msgs</depend>
  <depend>framefab_param_helpers</depend>

  <depend>choreo_visual_tools</depend>

  <build_depend>moveit_ros_move_group</build_depend>

</package>
