<?xml version="1.0"?>
<package format="2">
  <name>framefab_execution_gatekeeper</name>
  <version>0.1.0</version>
  <description>
    This package is responsible for the execution of process plans generated
    by packages like framefab_process_planning. Currently it can simulate generated
    trajectory in Rviz. It has potential to be further connected to online control system.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>framefab_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
