<?xml version="1.0"?>
<package format="2">
  <name>framefab_execution_gatekeeper</name>
  <version>0.1.0</version>
  <description>
    This package is responsible for the execution of process plans generated
    from core service clients.
    Currently it can stream generated trajectory from Choreo to down stream trajectory simulation packages and
    at the moment vendor- and dof- agnostic.

    It has potential to be further connected to online control system, but might need more vendor-specific settings.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>framefab_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!--the following client packages should be in presence -->
  <exec_depend>framefab_simulation_execution</exec_depend>
</package>
