<?xml version="1.0"?>
<package format="2">
  <name>framefab_geometry_helpers</name>
  <version>0.1.0</version>
  <description>
    This package implements routines for geometry format conversion.
  </description>

  <author email="yijiangh@mit.edu">Yijiang Huang</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
